<resources>
    <string name="app_name">GamECO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_in">Sıgn In</string>
    <string name="sign_up">Not a member yet? Sign Up </string>
    <string name="username">User Name</string>
    <string name="password">Password (7 characters or more)</string>
    <string name="createAccount">Create Account</string>
    <string name="fullname">Nick Name</string>
    <string name="email">E-Mail</string>
    <string name="VIN">Vehicle Identification Number</string>
    <string name="title_activity_singup">SingupActivity</string>
    <string name="fullName">Cagatay Akin Baser</string>
    <string name="canName">Can Türker</string>
    <string name="canLevel">Level : Master</string>
    <string name="canPoints">Score : 19334</string>
    <string name="companyName">BMW</string>
    <string name="department">Connected Drive</string>
    <string name="navigation_carStatus">Vehicle Status</string>
    <string name="navigation_myDriving">My Driving</string>
    <string name="navigation_highScores">High Scores</string>
    <string name="navigation_userDetails">Account</string>
    <string name="navigation_logout">Log Out</string>
    <string name="additionalInfo">Additional Information comes here..</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_application_id" translatable="false">588151798208426</string>
    <string name="fb_login_protocol_scheme">fb588151798208426</string>
    <string name="action_settings">Settings</string>

    <string name="title_progress_activity">Loading</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_daily_challenge">DailyChallengeActivity</string>

    <string name="popup_challenge_friend_name">User:%1$s</string>
    <string name="popup_challenge_general_title">Challenge!</string>
    <string name="popup_challenge_description">Description : %1$s</string>
    <string name="popup_challenge_from">Challenge from : %1$s!</string>
    <string name="popup_challenge_title">%1$s</string>
    <string name="popup_challenge_time">Time: %1$s!</string>
    <string name="popup_challenge_point">Points to be scored : %1$d</string>
    <string name="popup_challenge_current">Your current: %1$s!</string>
    <string name="popup_challenge_target">Your target: %1$s!</string>

    <string name="popup_accept_button">Accept!</string>
    <string name="popup_reject_button">Reject</string>
    <string name="popup_send_button">Send!</string>
    <string name="popup_start_button">Start!</string>
    <string name="popup_respond_button">Respond Request!</string>
</resources>
