<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

 <group android:checkableBehavior="single"
     android:title="My Car">
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Home" />
     <item
         android:id="@+id/nav_challenges"
         android:title="Challenges"
         android:icon="@drawable/ic_flag" />


 </group>

    <group android:checkableBehavior="single"
        android:title="@string/navigation_myDriving">
        <item
            android:id="@+id/nav_myAchievements"
            android:icon="@drawable/ic_group_work_black_24dp"
            android:title="Achievements"
            tools:icon="@drawable/ic_mileage" />
        <item android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_high_score"
            android:title="Rankings"/>
    </group>
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_carStatus"
        android:icon="@drawable/ic_drive_eta_black_24dp"
        android:title="@string/navigation_carStatus" />
    <item
        android:id="@+id/nav_userDetails"
        android:icon="@drawable/ic_face_black_24dp"
        android:title="@string/navigation_userDetails" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/navigation_logout" />


</group>

</menu>
