<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <android.support.v7.widget.CardView
        android:id="@+id/tournament_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tips_cardview"
            android:layout_below="@+id/tips_cardview"
            android:background="@color/fbutton_color_midnight_blue"
            android:padding="16dp">

            <Button
                android:id="@+id/rejectChallengeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="9dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/bree_serif"
                android:text="@string/popup_reject_button" />


            <TextView
                android:id="@+id/sure_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/bree_serif"
                android:paddingBottom="5dp"
                android:text="@string/popup_challenge_general_title"
                android:textColor="@color/colorLeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/detailDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:background="@color/fbutton_color_midnight_blue"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_from"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_time"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_point"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtCurrent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_current"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTarget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_target"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
<!--
            <TextView
                android:id="@+id/achievements_cardview_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sure_title"
                android:fontFamily="@font/bree_serif"
                android:text="Reduce Fuel Consumption to 0.5l / km"
                android:textColor="@color/white"
                android:textSize="18sp" />
-->
            <Button
                android:id="@+id/acceptChallengeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:background="@color/light_green"
                android:fontFamily="@font/bree_serif"
                android:text="@string/popup_accept_button" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>