<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_element"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"

    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/txtdetailTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/bree_serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/popup_challenge_title"
        android:textAlignment="center"
        android:textColor="@color/fbutton_color_asbestos"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/profileLinear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtdetailTitle"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/txtdetailFriendPic"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/txtdetailFriendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_challenge_friend_name"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detailDescription"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profileLinear1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/txtdetailTitle"
        android:layout_marginTop="25dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/txtdetailTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/bree_serif"
            android:text="@string/popup_challenge_time"
            android:textColor="@color/fbutton_color_asbestos"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtdetailPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/bree_serif"
            android:text="@string/popup_challenge_point"
            android:textColor="@color/fbutton_color_asbestos"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtdetailMy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/bree_serif"
            android:text="@string/popup_challenge_current"
            android:textColor="@color/fbutton_color_asbestos"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtdetailFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/bree_serif"
            android:text="@string/popup_challenge_target"
            android:textColor="@color/fbutton_color_asbestos"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtdetailWinning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailDescription"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/bree_serif"
        android:lineSpacingExtra="8sp"
        android:text="Congratulations! You are on the lead ! Keep up the good work"
        android:textAlignment="center"
        android:textColor="@color/colorLeaGreen"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/exitdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtdetailTitle"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:clickable="true"
        app:backgroundTint="@color/fbutton_color_asbestos"
        app:fabSize="mini"
        app:rippleColor="@color/black"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</RelativeLayout>