<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/tournament_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_alignEnd="@+id/tips_cardview"
            android:layout_below="@+id/tips_cardview"

            android:background="@color/fbutton_color_midnight_blue"
            android:padding="16dp">

            <Button
                android:id="@+id/closeChallengeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="9dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/bree_serif"
                android:text="CLOSE" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/bree_serif"
                android:paddingBottom="5dp"
                android:text="@string/popup_challenge_general_title"
                android:textColor="@color/colorLeaGreen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/friendsListview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linearLayout_selectFriend"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:fontFamily="@font/bree_serif"
                android:textDirection="firstStrong"/>

            <LinearLayout
                android:id="@+id/linearLayout_selectFriend"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txtdetailTitle"
                android:layout_marginTop="50dp"
                android:background="@color/fbutton_color_midnight_blue">

                <TextView
                    android:id="@+id/txtSelectFriendTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_time"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSelectFriendPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_point"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSelectFriendCurrent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_current"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSelectFriendTarget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/popup_challenge_target"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/sendChallengeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:background="@color/light_green"
                android:fontFamily="@font/bree_serif"
                android:text="SEND" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/exitSelectFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/closeChallengeBtn"
                android:layout_alignParentTop="true"
                android:clickable="true"
                app:backgroundTint="@color/fbutton_color_midnight_blue"
                app:fabSize="mini"
                app:rippleColor="@color/black"
                app:srcCompat="@android:drawable/ic_delete" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>