<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="37dp"
            android:layout_marginStart="30dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fullname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:fontFamily="@font/josefin_sans_semibold"
                android:hint="@string/fullname"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/light_green"
                android:textColorHint="@color/light_green"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:fontFamily="@font/josefin_sans_semibold"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/light_green"
                android:textColorHint="@color/light_green"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:fontFamily="@font/josefin_sans_semibold"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/light_green"
                android:textColorHint="@color/light_green"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:fontFamily="@font/josefin_sans_semibold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:padding="16dp"
                android:textColor="@color/light_green"
                android:textColorHint="@color/light_green"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_with_shape"
                android:fontFamily="@font/josefin_sans_semibold"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/createAccount"
                android:textColor="#fff"
                android:textSize="16sp" />
            <!--
            <EditText
                android:id="@+id/singup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="32dp"
                android:background="#54abee"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/createAccount"
                android:textColor="#fff"
                android:textSize="16sp" />
                -->
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
